mwa-cloudformation.yml
{
  "AWSTemplateFormatVersion": "2010-09-09",
  "Resources": {
    "vpc08919e7797ac1a6cf": {
      "Type": "AWS::EC2::VPC",
      "Properties": {
        "CidrBlock": "10.10.0.0/16",
        "InstanceTenancy": "default",
        "EnableDnsSupport": "true",
        "EnableDnsHostnames": "false",
        "Tags": [
        {
          "Key": "Name",
          "Value": "wma Assessment VPC"
        }
        ]
      }
    },
    "subnet0a7f2e3d16c1568ba": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.10.1.0/24",
        "AvailabilityZone": "us-east-1a",
        "VpcId": {
          "Ref": "vpc08919e7797ac1a6cf"
        },
        "Tags": [
        {
          "Key": "Name",
          "Value": "WMA-Private-Subnet"
        }
        ]
      }
    },
    "subnet0fd70237b5b891f21": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.10.2.0/24",
        "AvailabilityZone": "us-east-1b",
        "VpcId": {
          "Ref": "vpc08919e7797ac1a6cf"
        },
        "Tags": [
        {
          "Key": "Name",
          "Value": "WMA-Public-Subnet"
        }
        ]
      }
    },
    "igw0fd771c65880ed820": {
      "Type": "AWS::EC2::InternetGateway",
      "Properties": {
        "Tags": [
        {
          "Key": "Name",
          "Value": "WMA Internet Gateway"
        }
        ]
      }
    },
    "dopt7c543407": {
      "Type": "AWS::EC2::DHCPOptions",
      "Properties": {
        "DomainName": "ec2.internal",
        "DomainNameServers": [
          "AmazonProvidedDNS"
        ]
      }
    },
    "acl0b43129b8d3da4bce": {
      "Type": "AWS::EC2::NetworkAcl",
      "Properties": {
        "VpcId": {
          "Ref": "vpc08919e7797ac1a6cf"
        }
      }
    },
    "rtb02e30c90d6f48b84c": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "vpc08919e7797ac1a6cf"
        }
      }
    },
    "rtb012e9f88c02040295": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "vpc08919e7797ac1a6cf"
        },
        "Tags": [
        {
          "Key": "Name",
          "Value": "WMA Route Table"
        }
        ]
      }
    },
    "instancei042b6002800c8f75b": {
      "Type": "AWS::EC2::Instance",
      "Properties": {
        "DisableApiTermination": "false",
        "InstanceInitiatedShutdownBehavior": "stop",
        "IamInstanceProfile": "arn:aws:iam::560232212166:instance-profile/ec2_to_S3_profile",
        "ImageId": "ami-0916c408cb02e310b",
        "InstanceType": "t2.micro",
        "KeyName": "wma-key",
        "Monitoring": "false",
        "Tags": [
        {
          "Key": "Name",
          "Value": "WMA Private Instance"
        }
        ],
        "Volumes": [
        {
          "Device": "/dev/sdc",
          "VolumeId": {
            "Ref": "volumevol007cf0dbb9677fe48"
          }
        },
        {
          "Device": "/dev/sdb",
          "VolumeId": {
            "Ref": "volumevol0382b1eadcb1a0cd0"
          }
        }
        ],
        "NetworkInterfaces": [
        {
          "DeleteOnTermination": "true",
          "DeviceIndex": 0,
          "SubnetId": {
            "Ref": "subnet0a7f2e3d16c1568ba"
          },
          "PrivateIpAddresses": [
          {
            "PrivateIpAddress": "10.10.1.50",
            "Primary": "true"
          }
          ],
          "GroupSet": [
          {
            "Ref": "sgappsg"
          }
          ]
        }
        ]
      }
    },
    "instancei05aa948fcadc7eb2e": {
      "Type": "AWS::EC2::Instance",
      "Properties": {
        "DisableApiTermination": "false",
        "InstanceInitiatedShutdownBehavior": "stop",
        "ImageId": "ami-0916c408cb02e310b",
        "InstanceType": "t2.micro",
        "KeyName": "wma-key",
        "Monitoring": "false",
        "Tags": [
        {
          "Key": "Name",
          "Value": "WMA Public Instance"
        }
        ],
        "NetworkInterfaces": [
        {
          "DeleteOnTermination": "true",
          "DeviceIndex": 0,
          "SubnetId": {
            "Ref": "subnet0fd70237b5b891f21"
          },
          "PrivateIpAddresses": [
          {
            "PrivateIpAddress": "10.10.2.106",
            "Primary": "true"
          }
          ],
          "GroupSet": [
          {
            "Ref": "sgallowpublicaccess"
          },
          {
            "Ref": "sgappsg"
          }
          ],
          "AssociatePublicIpAddress": "true"
        }
        ]
      }
    },
    "volumevol007cf0dbb9677fe48": {
      "Type": "AWS::EC2::Volume",
      "Properties": {
        "AvailabilityZone": "us-east-1a",
        "Size": "10",
        "VolumeType": "gp2"
      }
    },
    "volumevol0382b1eadcb1a0cd0": {
      "Type": "AWS::EC2::Volume",
      "Properties": {
        "AvailabilityZone": "us-east-1a",
        "Size": "10",
        "VolumeType": "gp2"
      }
    },
    "sgappsg": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "Security group for App",
        "VpcId": {
          "Ref": "vpc08919e7797ac1a6cf"
        },
        "Tags": [
        {
          "Key": "name",
          "Value": "wma-app-sg"
        }
        ]
      }
    },
    "sgallowpublicaccess": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "Allow TLS inbound traffic",
        "VpcId": {
          "Ref": "vpc08919e7797ac1a6cf"
        }
      }
    },
    "acl1": {
      "Type": "AWS::EC2::NetworkAclEntry",
      "Properties": {
        "CidrBlock": "0.0.0.0/0",
        "Egress": "true",
        "Protocol": "-1",
        "RuleAction": "allow",
        "RuleNumber": "100",
        "NetworkAclId": {
          "Ref": "acl0b43129b8d3da4bce"
        }
      }
    },
    "acl2": {
      "Type": "AWS::EC2::NetworkAclEntry",
      "Properties": {
        "CidrBlock": "0.0.0.0/0",
        "Protocol": "-1",
        "RuleAction": "allow",
        "RuleNumber": "100",
        "NetworkAclId": {
          "Ref": "acl0b43129b8d3da4bce"
        }
      }
    },
    "subnetacl1": {
      "Type": "AWS::EC2::SubnetNetworkAclAssociation",
      "Properties": {
        "NetworkAclId": {
          "Ref": "acl0b43129b8d3da4bce"
        },
        "SubnetId": {
          "Ref": "subnet0fd70237b5b891f21"
        }
      }
    },
    "subnetacl2": {
      "Type": "AWS::EC2::SubnetNetworkAclAssociation",
      "Properties": {
        "NetworkAclId": {
          "Ref": "acl0b43129b8d3da4bce"
        },
        "SubnetId": {
          "Ref": "subnet0a7f2e3d16c1568ba"
        }
      }
    },
    "gw1": {
      "Type": "AWS::EC2::VPCGatewayAttachment",
      "Properties": {
        "VpcId": {
          "Ref": "vpc08919e7797ac1a6cf"
        },
        "InternetGatewayId": {
          "Ref": "igw0fd771c65880ed820"
        }
      }
    },
    "subnetroute2": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "rtb02e30c90d6f48b84c"
        },
        "SubnetId": {
          "Ref": "subnet0fd70237b5b891f21"
        }
      }
    },
    "subnetroute3": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "rtb012e9f88c02040295"
        },
        "SubnetId": {
          "Ref": "subnet0a7f2e3d16c1568ba"
        }
      }
    },
    "route1": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "DestinationCidrBlock": "0.0.0.0/0",
        "RouteTableId": {
          "Ref": "rtb02e30c90d6f48b84c"
        },
        "GatewayId": {
          "Ref": "igw0fd771c65880ed820"
        }
      },
      "DependsOn": "gw1"
    },
    "route2": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "DestinationCidrBlock": "0.0.0.0/0",
        "RouteTableId": {
          "Ref": "rtb012e9f88c02040295"
        }
      }
    },
    "dchpassoc1": {
      "Type": "AWS::EC2::VPCDHCPOptionsAssociation",
      "Properties": {
        "VpcId": {
          "Ref": "vpc08919e7797ac1a6cf"
        },
        "DhcpOptionsId": {
          "Ref": "dopt7c543407"
        }
      }
    },
    "ingress1": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "GroupId": {
          "Ref": "sgappsg"
        },
        "IpProtocol": "tcp",
        "FromPort": "22",
        "ToPort": "22",
        "SourceSecurityGroupId": {
          "Ref": "sgallowpublicaccess"
        },
        "SourceSecurityGroupOwnerId": "560232212166"
      }
    },
    "ingress2": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "GroupId": {
          "Ref": "sgallowpublicaccess"
        },
        "IpProtocol": "tcp",
        "FromPort": "22",
        "ToPort": "22",
        "CidrIp": "0.0.0.0/0"
      }
    },
    "egress1": {
      "Type": "AWS::EC2::SecurityGroupEgress",
      "Properties": {
        "GroupId": {
          "Ref": "sgappsg"
        },
        "IpProtocol": "-1",
        "CidrIp": "0.0.0.0/0"
      }
    },
    "egress2": {
      "Type": "AWS::EC2::SecurityGroupEgress",
      "Properties": {
        "GroupId": {
          "Ref": "sgallowpublicaccess"
        },
        "IpProtocol": "-1",
        "CidrIp": "0.0.0.0/0"
      }
    }
  },
  "Description": "WMA Cloud Formation Template "
}
